<resources>
    <string name="app_name">WhereMyMoneyGone</string>

    <string name="account">账户</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="delete">删除</string>
    <string name="add">添加</string>
    <string name="modify">修改</string>
    <string name="expenditure">支出</string>
    <string name="income">收入</string>
    <string name="balance">结余</string>
    <string name="transfer">转账</string>
    <string name="amount">金额</string>
    <string name="category">分类</string>
    <string name="time">时间</string>
    <string name="others">其他</string>
    <string name="remarks">备注</string>

    <string name="record_one">记一笔</string>

    <string name="month_expenditure">月支出</string>
    <string name="month_income">月收入</string>
    <string name="month_balance">月结余</string>

    <string name="record_once_more">再记</string>
    <string name="save">保存</string>

    <string name="please_input">请输入</string>

    <string name="please_input_amount">请输入金额</string>
    <string name="please_select_account">请选择账户</string>
    <string name="please_input_total_quota">请输入总额度</string>
    <string name="please_input_used_quota">请输入已用额度</string>

    <string name="meals">三餐</string>
    <string name="buy_food">买菜</string>
    <string name="takeaway">外卖</string>
    <string name="snacks">零食</string>
    <string name="clothes">衣服</string>
    <string name="rent">房租</string>
    <string name="game">游戏</string>
    <string name="necessary">日用品</string>
    <string name="housing_loan">房贷</string>
    <string name="live_payment">生活缴费</string>
    <string name="brokerage">手续费</string>
    <string name="traffic">出行交通</string>
    <string name="membership">会员</string>
    <string name="digital">数码</string>
    <string name="transfer_out">转出</string>
    <string name="entertainment">娱乐</string>
    <string name="eat_out">下馆子</string>
    <string name="medical_care">医疗</string>
    <string name="hotel">酒店住宿</string>
    <string name="household_goods">家具电器</string>

    <string name="wages">工资</string>
    <string name="second_hand">二手</string>
    <string name="red_envelopes">红包</string>
    <string name="financial_transactions">理财</string>
    <string name="transfer_in">转入</string>
    <string name="interest">利息</string>

    <string name="main_image_config">主图设置</string>
    <string name="statistics">报表统计</string>
    <string name="dark_mode_config">暗黑模式</string>
    <string name="app_lock_config">应用锁</string>
    <string name="modify_app_lock_password">修改密码</string>
    <string name="fingerprint_unlock_config">指纹解锁</string>
    <string name="data_backup">数据备份</string>
    <string name="data_restore">数据还原</string>

    <string name="on">开</string>
    <string name="off">关</string>
    <string name="follow_system">跟随系统</string>

    <string name="image_error_please_reselect">图片错误，请重新选择</string>
    <string name="image_crop_error_please_reselect">图片裁切错误，请重试进行选择</string>

    <string name="total_property">总资产</string>
    <string name="net_property">净资产</string>
    <string name="total_liabilities">总负债</string>
    <string name="total_borrow_out">总借出</string>
    <string name="total_borrow_in">总借入</string>

    <string name="add_account">添加账户</string>
    <string name="modify_account">修改账户</string>
    <string name="account_category">账户分类</string>
    <string name="account_type">账户类型</string>
    <string name="account_amount">账户金额</string>
    <string name="total_quota">总额度</string>
    <string name="used_quota">已用额度</string>

    <string name="cash">现金</string>
    <string name="ali_pay">支付宝</string>
    <string name="we_chat">微信</string>
    <string name="bank_card">银行卡</string>

    <string name="ali_pay_fund">支付宝基金</string>
    <string name="jd_finance">京东金融</string>
    <string name="tiantian_fund">天天基金</string>
    <string name="ZOAM">中欧财富</string>

    <string name="ant_credit_pay">花呗</string>
    <string name="jdbt">京东白条</string>
    <string name="cmb">招商银行</string>
    <string name="cmbc">民生银行</string>
    <string name="wrcb">武汉农村商业银行</string>

    <string name="capital_account">资金账户</string>
    <string name="credit_account">信用账户</string>
    <string name="investment_account">投资账户</string>

    <string name="transfer_in_account">收款账户</string>
    <string name="transfer_out_account">付款账户</string>
    <string name="in_and_out_account_cannot_same">付款与收款账号不能相同</string>
    <string name="please_select_in_account">请选择收款账号</string>
    <string name="please_select_out_account">请选择付款账号</string>

    <string name="borrow_and_payback">借还</string>
    <string name="borrow_out">借出</string>
    <string name="borrow_in">借入</string>
    <string name="payback_out">还出</string>
    <string name="payback_in">还入</string>
    <string name="borrower">借款人</string>
    <string name="payer">还款人</string>
    <string name="payee">收款人</string>

    <string name="sure_to_delete_account">确认删除账户？</string>

    <string name="account_quota">账户额度</string>
    <string name="account_balance">账户余额</string>
    <string name="total_profit">总收益</string>
    <string name="profit_rate">收益率</string>
    <string name="remaining_quota">剩余额度</string>

    <string name="please_input_password_to_confirm">请输入密码进行验证</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_new_password_again">请再次输入新密码进行确认</string>
    <string name="not_same_input_so_please_input_new_password_again">两次输入不一致，请重新输入新密码</string>
    <string name="fingerprint_authentication_dialog_title">指纹验证</string>
    <string name="fingerprint_authentication_dialog_description"> </string>

    <string name="account_detail">账单详情</string>

    <string name="select_backup_file">选择备份文件</string>
    <string name="delete_backup_file">删除备份文件</string>
    <string name="share_backup_file">发送备份文件</string>
    <string name="success_to_backup_data">数据备份成功</string>
    <string name="failed_to_backup_data">数据备份失败</string>
    <string name="notify_wrong_backup_file">不是有效的备份文件</string>
    <string name="import_backup_file_overlay">覆盖导入备份文件</string>
    <string name="import_backup_file_merge">合并导入备份文件</string>
    <string name="notify_restore_data_overlay">覆盖导入将清空原有数据，是否继续操作？</string>
    <string name="notify_restore_data_merge">合并导入将在合并现有数据和导入数据，是否继续操作？</string>
    <string name="notify_delete_backup_file">是否删除该备份文件？</string>
    <string name="notify_share_backup_file">是否分享该备份文件？</string>
    <string name="input_encrypt_password">密码错误，输入备份数据时使用的密码</string>
    <string name="notify_success_to_restore">数据还原成功</string>

    <string name="January">一月</string>
    <string name="February">二月</string>
    <string name="March">三月</string>
    <string name="April">四月</string>
    <string name="May">五月</string>
    <string name="June">六月</string>
    <string name="July">七月</string>
    <string name="August">八月</string>
    <string name="September">九月</string>
    <string name="October">十月</string>
    <string name="November">十一月</string>
    <string name="December">十二月</string>
    <string name="whole_year">全年</string>

    <string name="expenditure_statistics">支出统计</string>
    <string name="income_statistics">收入统计</string>
    <string name="financial_transactions_statistics">理财统计</string>

    <string name="empty_data">暂无数据</string>

    <string name="traces_search">账单搜索</string>
    <string name="traces_time">账单时间</string>
    <string name="custom_time">自定义时间</string>
    <string name="current_month">本月</string>
    <string name="last_month">上月</string>
    <string name="current_year">今年</string>
    <string name="last_year">去年</string>
    <string name="all">全部</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="screen_condition">筛选条件</string>
    <string name="traces_amount">账单金额</string>
    <string name="min_amount">最低</string>
    <string name="max_amount">最高</string>
    <string name="traces_search_hint">输入关键词进行搜索（支持账单类型和备注）</string>
    <string name="search_result_count_is">共搜索到%d条记录</string>
</resources>